word wrap fix

--- a/src/assets/style/components/_contact.scss
+++ b/src/assets/style/components/_contact.scss
@@ -49,6 +49,7 @@
 				padding: 1rem;
 				border-radius: 10px;
 				margin-top: .5rem;
+				word-wrap: break-word;
 			}
 		}
 	}
